# murmur

./: .gitignore  .gitmodules  Caddyfile  Makefile  README.md  composer.json  deploy-prod.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  frankenphp.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  lint.yml  tests.yml
app/Http/Controllers/: DesktopController.php  TorrentController.php
app/Http/Middleware/: AddCrossOriginHeaders.php
app/Models/: Torrent.php  User.php
app/Policies/: TorrentPolicy.php
app/Providers/: AuthServiceProvider.php
bootstrap/: app.php
database/migrations/: 0001_01_01_000003_create_torrents_table.php
deploy/ansible/: ansible.cfg  deploy.yml
deploy/scripts/: deploy.sh
desktop/: .qmake.stash  BUILD.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CMakeUserPresets.json  Failing-Tests.md  LICENSE  Makefile  README.md  conanfile.py  desktop.pro  test_model_download.cpp  test_validator.cpp  test_whisper_download.cpp
desktop/.github/workflows/: build.yml
desktop/desktop.app/Contents/: Info.plist
desktop/packaging/linux/: murmur-desktop.desktop.in
desktop/packaging/macos/: Info.plist.in  entitlements.plist
desktop/packaging/windows/: murmur.nsi
desktop/resources/icons/: app.icns
desktop/resources/tests/audio/: README.md
desktop/resources/tests/video/: README.md
desktop/scripts/: build.py  setup.py
desktop/src/: CMakeLists.txt  main.cpp
desktop/src/core/common/: Config.cpp  Config.hpp  DebugLogger.cpp  DebugLogger.hpp  ErrorRecovery.cpp  ErrorRecovery.hpp  Expected.hpp  Logger.cpp  Logger.hpp  RetryManager.cpp  RetryManager.hpp
desktop/src/core/media/: FFmpegWrapper.cpp  FFmpegWrapper.hpp  HardwareAccelerator.cpp  HardwareAccelerator.hpp  MediaPipeline.cpp  MediaPipeline.hpp  PlatformAccelerator.cpp  PlatformAccelerator.hpp  VideoPlayer.cpp  VideoPlayer.hpp
desktop/src/core/security/: InfoHashValidator.cpp  InfoHashValidator.hpp  InputValidator.cpp  InputValidator.hpp  SandboxManager.cpp  SandboxManager.hpp  SecureIPC.cpp  SecureIPC.hpp
desktop/src/core/storage/: FileCache.cpp  FileCache.hpp  FileManager.cpp  FileManager.hpp  MemoryManager.cpp  MemoryManager.hpp  StorageManager.cpp  StorageManager.hpp
desktop/src/core/torrent/: LibTorrentWrapper.cpp  LibTorrentWrapper.hpp  TorrentEngine.cpp  TorrentEngine.hpp  TorrentSecurityWrapper.cpp  TorrentSecurityWrapper.hpp  TorrentStateModel.cpp  TorrentStateModel.hpp
desktop/src/core/transcription/: ModelDownloader.cpp  ModelDownloader.hpp  ModelManager.cpp  ModelManager.hpp  TranscriptionFormatter.cpp  TranscriptionFormatter.hpp  TranscriptionTypes.hpp  WhisperEngine.cpp  WhisperEngine.hpp  WhisperWrapper.cpp  WhisperWrapper.hpp
desktop/src/platform/linux/: LinuxIPC.cpp  LinuxIPC.hpp  LinuxMediaAccelerator.cpp  LinuxMediaAccelerator.hpp  LinuxSandbox.cpp  LinuxSandbox.hpp
desktop/src/platform/macos/: MacOSBridge.mm  MacOSIPC.cpp  MacOSIPC.hpp  MacOSMediaAccelerator.hpp  MacOSMediaAccelerator.mm  MacOSSandbox.cpp  MacOSSandbox.hpp
desktop/src/platform/windows/: WindowsIPC.cpp  WindowsIPC.hpp  WindowsMediaAccelerator.cpp  WindowsMediaAccelerator.hpp  WindowsSandbox.cpp  WindowsSandbox.hpp
desktop/src/qml/: main.qml
desktop/src/qml/components/: AboutDialog.qml  ErrorDialog.qml  MainMenuBar.qml  ProgressOverlay.qml  SettingsDialog.qml  TorrentItem.qml  TranscriptionViewer.qml  VideoPlayer.qml
desktop/src/ui/: qt_metatypes.hpp
desktop/src/ui/controllers/: AppController.cpp  AppController.hpp  FileManagerController.cpp  FileManagerController.hpp  MediaController.cpp  MediaController.hpp  TorrentController.cpp  TorrentController.hpp  TranscriptionController.cpp  TranscriptionController.hpp
desktop/src/ui/models/: FileListModel.cpp  FileListModel.hpp  TorrentListModel.cpp  TorrentListModel.hpp  TranscriptionModel.cpp  TranscriptionModel.hpp
desktop/tests/: CMakeLists.txt  test_appcontroller_init.cpp  test_end_to_end_integration.cpp  test_expected.cpp  test_ffmpeg_wrapper.cpp  test_input_validator.cpp  test_main.cpp  test_performance_benchmarks.cpp  test_qml_controller_readiness.cpp  test_real_media_processing.cpp  test_retry_manager.cpp  test_runner.pro  test_runner_standalone.cpp  test_sandbox_resource_usage_hardening.cpp  test_security_components.cpp  test_simple_real_media.cpp  test_storage_manager.cpp  test_torrent_engine.cpp  test_ui_flows.cpp  test_ui_flows_simplified.cpp  test_ui_integration.cpp  test_video_processing_integration.cpp
desktop/tests/assets/: README.md
desktop/tests/qml/: controller_properties_summary.md  tst_ControllerReadiness.qml  tst_EndToEndControllerReadiness.qml
desktop/tests/unit/transcription/: TestWhisperEngine.cpp
desktop/tests/utils/: MockComponents.cpp  MockComponents.hpp  TestDatabase.cpp  TestDatabase.hpp  TestUtils.cpp  TestUtils.hpp
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
k8s/manifests/: caddy-config.yaml  configmap.yaml  kustomization.yaml  murmur-deployment.yaml  namespace.yaml  pv-pvc.yaml  redis-deployment.yaml  secret.yaml  soketi-deployment.yaml
k8s/terraform/: main.tf  terraform.tfstate
resources/js/: ssr.tsx  ziggy.d.ts
resources/js/components/: app-sidebar.tsx
resources/js/components/ui/: dialog.tsx  slider.tsx
resources/js/layouts/settings/: layout.tsx
resources/js/lib/stubs/: bittorrent-dht.js
resources/js/pages/: dashboard.tsx  welcome.tsx
resources/js/pages/dashboard/: index.tsx
resources/js/pages/dashboard/components/: Console.tsx  Download.tsx  FileManager.tsx  FileSelectionDialog.tsx  ShareDialog.tsx  TorrentManager.tsx  VideoPlayer.tsx  VideoTools.tsx
resources/js/pages/dashboard/context/: WebTorrentContext.tsx
resources/js/pages/dashboard/hooks/: use-ffmpeg.ts  use-file-storage.ts
resources/js/types/: global.d.ts  index.d.ts
resources/views/: app.blade.php
routes/: web.php
tests/Feature/: DashboardTest.php
